Fix tracklist dropdown overflow

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -46,6 +46,8 @@
   margin: 8px 0;
 
   @include desktop() {
+    text-align: left;
+
     &:hover {
       color: $primary !important;
       text-decoration: underline;
